Fixed Slider (#11)
* Correct typo in filename

* Hide horizontal scrolling caused by slider

* Fixed slider

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -7,7 +13,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
-  background-image: url("./assets/backgrounds/mainBg.png");
+  background-image: url("./assets/backgrounds/mainBG.png");
   background-size: cover;
 }
 
